--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "dev": "nodemon",
     "next:export": "next export",
     "export": "npm-run-all clean next:build next:export",
-    "build": "npm-run-all clean compile next:build",
+    "buildx": "npm-run-all clean compile next:build",
+    "build": "next build",
     "build-prod": "npm-run-all clean build start",
     "docker:db": "docker compose -f docker-compose.db.yml up",
     "docker:dev": "docker compose -f docker-compose.dev.yml up",
