--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "UNLICENSED",
   "private": true,
   "engines": {
-    "node": "16.14.0"
+    "node": "16.15.0"
   },
   "nodemonConfig": {
     "exec": "npm-run-all compile serve:dev",
@@ -46,9 +46,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
-    "@aws-sdk/client-dynamodb": "^3.58.0",
-    "@aws-sdk/lib-dynamodb": "^3.58.0",
-    "@aws-sdk/util-dynamodb": "^3.58.0",
+    "@aws-sdk/client-dynamodb": "3.118.1",
+    "@aws-sdk/lib-dynamodb": "3.118.1",
+    "@aws-sdk/util-dynamodb": "3.118.1",
     "@babel/core": "7.12.10",
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/polyfill": "^7.6.0",
@@ -151,6 +151,10 @@
     "node-mocks-http": "^1.11.0",
     "react-addons-test-utils": "15.6.2",
     "react-test-renderer": "16.14.0"
+  },
+  "resolutions": {
+    "@aws-sdk/client-sts": "3.118.1",
+    "@aws-sdk/credential-provider-ini": "3.118.1"
   },
   "husky": {
     "hooks": {
