--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "UNLICENSED",
   "private": true,
   "engines": {
-    "node": "16.15.0"
+    "node": ">=16.14"
   },
   "nodemonConfig": {
     "exec": "npm-run-all compile serve:dev",
@@ -36,19 +36,18 @@
     "dev": "nodemon",
     "next:export": "next export",
     "export": "npm-run-all clean next:build next:export",
-    "buildx": "npm-run-all clean compile next:build",
-    "build": "next build",
+    "build": "npm-run-all clean compile next:build",
     "build-prod": "npm-run-all clean build start",
     "docker:db": "docker compose -f docker-compose.db.yml up",
     "docker:dev": "docker compose -f docker-compose.dev.yml up",
-    "local:start": "pm2 start ecosystem.config.json --no-daemon",
+    "start": "ts-node dist/server/server.js",
     "prod:start": "pm2 start ecosystem.config.json"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
-    "@aws-sdk/client-dynamodb": "3.118.1",
-    "@aws-sdk/lib-dynamodb": "3.118.1",
-    "@aws-sdk/util-dynamodb": "3.118.1",
+    "@aws-sdk/client-dynamodb": "^3.58.0",
+    "@aws-sdk/lib-dynamodb": "^3.58.0",
+    "@aws-sdk/util-dynamodb": "^3.58.0",
     "@babel/core": "7.12.10",
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/polyfill": "^7.6.0",
@@ -151,10 +150,6 @@
     "node-mocks-http": "^1.11.0",
     "react-addons-test-utils": "15.6.2",
     "react-test-renderer": "16.14.0"
-  },
-  "resolutions": {
-    "@aws-sdk/client-sts": "3.118.1",
-    "@aws-sdk/credential-provider-ini": "3.118.1"
   },
   "husky": {
     "hooks": {
